TODOs

tests/support for flsa and HMM?

- option to not stop in labelError if there is the same number of
  changes in two models.

2017.11.17

In vignette, remove cghseg since it has memory problems, use Segmentor
instead, with trivial 1 segment model when Segmentor fails.

Don't use fullpage in vignette because that causes a NOTE on CRAN mac.

2017.07.12

try to fix vignette by using cghseg:::segmeanCO instead of Segmentor.

2017.07.11

there is some problem with Segmentor3IsBack on windows, which crashes
our vignette re-building in CRAN checks on solaris... not sure why but
try to fix via adding tryCatch in vignette.

Add ... passed from IntervalRegressionCV to
IntervalRegressionRegularized.

2017.06.14

labelError bugfix and test case for no predicted changes.

Simplify examples -- avoid running Segmentor since this crashes on new
versions of R on windows.

2017.05.08

IntervalRegressionCV uses future instead of foreach.

2017.05.05

corrections encountered while preparing tutorial,

- theme_no_space() evaluated at runtime rather than theme_no_space
  which was evaluated at build time.

- stop with an error if there are models that have the same number of
  changes -- this prevents problems for changepoint models, but
  prevents using the code with L1 regularized models (fused lasso).

- stop with an error in targetIntervals if the errors column is not
  numeric. And return an errors column (the minimum number of
  incorrect labels).

2017.04.11

prepare for CRAN submission:
- convert to src/*.cpp files and register routines.
- NULL variables to avoid CRAN checks about global variables.
- vignette.
- many more user-friendly error messages.
- coefficients of IntervalRegression models are
  now returned on the original scale.

2017.03.24

IntervalRegression S3 class with plot, print, and predict methods.

largestContinuousMinimum C implementation.

more informative error messages when arguments to R functions are not
as expected.
